4788
Is this fixed?

The compiler rejects the code in 2.10.0.r25759-b20110929020424 with:

{code}
<console>:8: error: illegal dependent method type
         def ?[S <: AnyRef](implicit w : S) : w.type = w
                                     ^
<console>:16: error: illegal dependent method type
         def apply[S: ZipWith](s : S) = ?[ZipWith[S]].zipWith(s) 
             ^
{code}
